--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GIO-INFO</title>
+  <title>gig-gio-info</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/119/119595.png">
   <style>
     body {
