--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>gig-gio-info</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/119/119595.png">
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/1124286891110449294/1317871214001127454/Pixelion.png?ex=676042b6&is=675ef136&hm=3b00666e032f8d855cbea5756e013105de96d83ddc460168d650962ebd743e9c&">
   <style>
     body {
       font-family: 'Arial', sans-serif;
