--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>gig-gio-info</title>
-  <link rel="icon" href="https://cdn.discordapp.com/attachments/1124286891110449294/1317872069655920700/Pixelion_2.png?ex=67604382&is=675ef202&hm=8b51e3d77eabd48ba233f382063d240fc0158a59286be0e481edd412b3a90daa&">
+  <title>GIO-INFO</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/119/119595.png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
