--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       background: #1E1E1E;
-      color: #FFA500; /* Оранжевый */
+      color: #FFA07A; /* Светлый оранжевый */
       margin: 0;
       padding: 0;
       display: flex;
@@ -28,7 +28,7 @@
     }
 
     h1 {
-      color: #FFA500; /* Оранжевый */
+      color: #FFA07A; /* Светлый оранжевый */
       margin-bottom: 20px;
       font-size: 2rem;
     }
@@ -36,7 +36,7 @@
     button {
       padding: 10px 20px;
       margin: 10px 10px 0 10px;
-      background: #FF5733; /* Ярко-красный с оранжевым */
+      background: #FF7F50; /* Темно-оранжевый */
       color: white;
       font-size: 1rem;
       font-weight: bold;
@@ -47,7 +47,7 @@
     }
 
     button:hover {
-      background: #FF7043; /* Легко осветленный красно-оранжевый */
+      background: #FF6347; /* Яркий оранжевый */
     }
 
     #info {
@@ -67,11 +67,11 @@
     footer {
       margin-top: 20px;
       font-size: 1rem;
-      color: #FFA500; /* Оранжевый */
+      color: #FFA07A; /* Светлый оранжевый */
     }
 
     footer a {
-      color: #FFA500;
+      color: #FFA07A;
       text-decoration: none;
       font-weight: bold;
     }
@@ -91,7 +91,7 @@
   </div>
   <div id="map"></div>
   <footer>
-    Made by <a href="https://github.com/gigandbro/" target="_blank">gig</a> via 🧡
+    Made by <a href="https://github.com/gigandbro/" target="_blank">gig</a>
   </footer>
 
   <script>
